trunk/Archive2/26/493b1e499ba0b4/output
main.cpp:8:23: error: implicit instantiation of undefined template 'C<A, int *, int>'
    C<A, A<int>, int> c;
                      ^
main.cpp:1:70: note: template is declared here
template<template<typename> class X, typename Y, typename Y1> struct C;
                                                                     ^
1 error generated.
